Add organisation css class and img div for spacing

--- a/index.html
+++ b/index.html
@@ -162,24 +162,26 @@
 
         <div class="row">
             <h2>Organisations</h2>
-			<div class="col-md-3 col-md-3 col-sm-3 person">
-                <img class="org_img" style="padding-bottom: 40px" src="/assets/img/ei.png"/>
-                <div class="p_bio">
+		<div class="col-md-3 col-md-3 col-sm-3 organisation">
+                <div class="o_img">
+                  <img class="org_img" style="padding-bottom: 40px" src="/assets/img/ei.png"/>
+                </div>
+                <div class="o_bio">
                     <h4>Earlham Institute</h4>
 
                     The Data Infrastructure and Algorithms group focuses on research into understanding how best to manage, represent and analyse data for open science, as well as exploring new hardware, algorithms and methodologies to develop tools to push the boundaries of data-driven informatics in the life sciences. The team applies their research expertise to develop infrastructure platforms for data and software dissemination and publication, assembly algorithms for viral and microbial metagenomics, large-scale data visualisation, and best practice and training in bioinformatics.
                 </div>
             </div>
-            <div class="col-md-3 col-md-3 col-sm-3 person">
+            <div class="col-md-3 col-md-3 col-sm-3 organisation">
+              <div class="o_img">
                 <img class="org_img" src="/assets/img/oerc-logo.jpg"/>
-                <div class="p_bio">
-                    <h4>Oxford e-Research Centre</h4>
-
-                    The Oxford team mainly contributes elements of the open source ISA metadata tracking framework <a href="http://isa-tools.org">http://isa-tools.org</a>, which is supported by an international community (ISA commons, <a href="http://www.isacommons.org/">http://www.isacommons.org/</a>). The team develops the metadata representation, providing the model and configurations that enable standards-compliant reporting, metadata deposition APIs and services, as well as conversion and validation services. These functionalities are being developed within and incorporated into the wider ISA-API project <a href="https://github.com/ISA-tools/isa-api">https://github.com/ISA-tools/isa-api</a>.
-                </div>
+              </div>
+              <div class="o_bio">
+                <h4>Oxford e-Research Centre</h4>
+                The Oxford team mainly contributes elements of the open source ISA metadata tracking framework <a href="http://isa-tools.org">http://isa-tools.org</a>, which is supported by an international community (ISA commons, <a href="http://www.isacommons.org/">http://www.isacommons.org/</a>). The team develops the metadata representation, providing the model and configurations that enable standards-compliant reporting, metadata deposition APIs and services, as well as conversion and validation services. These functionalities are being developed within and incorporated into the wider ISA-API project <a href="https://github.com/ISA-tools/isa-api">https://github.com/ISA-tools/isa-api</a>.
+              </div>
             </div>
         </div>
-
 
         <div class="row">
             <h2>People</h2>
