Fix spacing and middle img alignment in o_img class divs

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <h2>Organisations</h2>
 		<div class="col-md-3 col-md-3 col-sm-3 organisation">
                 <div class="o_img">
-                  <img class="org_img" style="padding-bottom: 40px" src="/assets/img/ei.png"/>
+                  <img class="org_img" src="/assets/img/ei.png"/>
                 </div>
                 <div class="o_bio">
                     <h4>Earlham Institute</h4>
