change paths from absolute

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <div class="row text-center">
         <div class="col-md-12 col-md-12 col-sm-12">
             <h1>
-                <img class="header-img" src="/assets/img/copo_white_800.png">
+                <img class="header-img" src="assets/img/copo_white_800.png">
             </h1>
             <h2 class="head-sub-main">describe &nbsp deposit &nbsp discover</h2>
         </div>
@@ -164,7 +164,7 @@
             <h2>Organisations</h2>
 		<div class="col-md-3 col-md-3 col-sm-3 organisation">
                 <div class="o_img">
-                  <img class="org_img" src="/assets/img/ei.png"/>
+                  <img class="org_img" src="assets/img/ei.png"/>
                 </div>
                 <div class="o_bio">
                     <h4>Earlham Institute</h4>
@@ -174,7 +174,7 @@
             </div>
             <div class="col-md-3 col-md-3 col-sm-3 organisation">
               <div class="o_img">
-                <img class="org_img" src="/assets/img/oerc-logo.jpg"/>
+                <img class="org_img" src="assets/img/oerc-logo.jpg"/>
               </div>
               <div class="o_bio">
                 <h4>Oxford e-Research Centre</h4>
@@ -186,7 +186,7 @@
         <div class="row">
             <h2>People</h2>
             <div class="col-md-3 col-md-3 col-sm-3 person">
-                <img src="/assets/img/toni.jpg"/>
+                <img src="assets/img/toni.jpg"/>
                 <div class="p_bio">
                     <h4>Toni Etuk</h4>
                     <p class="p_position">Earlham Institute</p>
@@ -196,12 +196,12 @@
                     and a number of techniques from Machine Learning and statistics, in contexts of Open Science and
                     Bioinformatics.
 
-                    <p class="p_orcid"><img src="/assets/img/orcid.png"><a
+                    <p class="p_orcid"><img src="assets/img/orcid.png"><a
                             href="http://orcid.org/0000-0001-8320-660X">orcid.org/0000-0001-8320-660X</a></p>
                 </div>
             </div>
             <div class="col-md-3 col-md-3 col-sm-3 person">
-                <img src="/assets/img/david.png"/>
+                <img src="assets/img/david.png"/>
                 <div class="p_bio">
                     <h4>David Johnson</h4>
                     <p class="p_position">Oxford eResearch Centre</p>
@@ -209,13 +209,13 @@
                     Centre. His work concerns the development of data infrastructure to support data-intensive research
                     in the life, natural, and biomedical sciences. In the COPO project, David is part of the ISA Team
                     developing the underlying 'omics standards framework that COPO uses.
-                    <p class="p_orcid"><img src="/assets/img/orcid.png"><a
+                    <p class="p_orcid"><img src="assets/img/orcid.png"><a
                             href="http://orcid.org/0000-0002-2323-6847">orcid.org/0000-0002-2323-6847</a></p>
                 </div>
             </div>
 
             <div class="col-md-3 col-md-3 col-sm-3 person">
-                <img src="/assets/img/Susanna.jpg"/>
+                <img src="assets/img/Susanna.jpg"/>
                 <div class="p_bio">
                     <h4>Pauli Gaultieri</h4>
                     <p class="p_position">Oxford eResearch</p>
@@ -226,7 +226,7 @@
                 </div>
             </div>
             <div class="col-md-3 col-md-3 col-sm-3 person">
-                <img src="/assets/img/Alejandra.jpg"/>
+                <img src="assets/img/Alejandra.jpg"/>
                 <div class="p_bio">
                     <h4>Christopher Molisanti</h4>
                     <p class="p_position">Oxford eResearch</p>
@@ -241,7 +241,7 @@
 
         <div class="row">
             <div class="col-md-3 col-md-3 col-sm-3 person">
-                <img src="/assets/img/Philippe.jpg"/>
+                <img src="assets/img/Philippe.jpg"/>
                 <div class="p_bio">
                     <h4>Pauli Gaultieri</h4>
                     <p class="p_position">Oxford eResearch</p>
@@ -252,7 +252,7 @@
                 </div>
             </div>
             <div class="col-md-3 col-md-3 col-sm-3 person">
-                <img src="/assets/img/felix.jpg"/>
+                <img src="assets/img/felix.jpg"/>
                 <div class="p_bio">
                     <h4>Felix Shaw</h4>
                     <p class="p_position">Earlham Institute</p>
@@ -260,7 +260,7 @@
                     industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
                     and
                     scrambled it to make a type specimen book.
-                    <p class="p_orcid"><img src="/assets/img/orcid.png"><a
+                    <p class="p_orcid"><img src="assets/img/orcid.png"><a
                             href="http://orcid.org/0000-0001-9649-5906">orcid.org/0000-0001-9649-5906</a></p>
 
                 </div>
