Small change to head-sub-main font size and weight

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <h2>Project</h2>
                 <h4>
                     <strong>
-COPO is a portal for plant scientists to describe, store & retrieve data more easily, using community standards and public repositories. 
+COPO is a portal for plant scientists to describe, store and retrieve data more easily, using community standards and public repositories. 
                     </strong>
                 </h4>
             </div>
