Update header links, and add Events link

--- a/index.html
+++ b/index.html
@@ -46,16 +46,11 @@
     <!-- Collect the nav links for toggling -->
     <div class="collapse navbar-collapse navbar-ex1-collapse">
         <ul class="nav navbar-nav pull-right">
-            <li><a href="#home">HOME</a>
-            </li>
-            <li><a href="#about">Project</a>
-            </li>
-
-            <li><a href="#work-sec">People</a>
-            </li>
-            <li><a href="#contact-sec">Content</a>
-            </li>
-
+            <li><a href="#home">HOME</a></li>
+            <li><a href="#about">Project</a></li>
+            <li><a href="#work-sec">Events</a></li>
+            <li><a href="#org-sec">People</a></li>
+            <li><a href="#contact-sec">Contact</a></li>
         </ul>
     </div>
     <!-- /.navbar-collapse -->
@@ -157,10 +152,8 @@ COPO is a portal for plant scientists to describe, store and retrieve data more 
     </div>
 </section>
 
-<section class="color-white">
+<section class="color-white" id="org-sec">
     <div class="container">
-
-
         <div class="row">
             <h2>Organisations</h2>
 		<div class="col-md-3 col-md-3 col-sm-3 organisation">
