Add project text and profile for Rob

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </h1>
             <div class="head-sub-main">
               <h2>describe &nbsp deposit &nbsp discover</h2>
-<p>Publications, data, images, and other ‘research objects’ can be submitted through COPO to remote long-term storage repositories, with a helpful graphical user interface (GUI) relieving much of the eye-watering formatting burden required for preparing the information that goes alongside the research data.</p>
+<p>Publications, data, images, and other ‘research objects’ can be submitted through COPO to remote long-term storage repositories, with a helpful graphical user interface (GUI) relieving much of the eye-watering formatting burden required for preparing the information that goes alongside research data.</p>
             </div>
         </div>
     </div>
@@ -86,7 +86,9 @@
                 <h2>Project</h2>
                 <h4>
                     <strong>
-COPO is a portal for plant scientists to describe, store and retrieve data more easily, using community standards and public repositories. 
+COPO is a portal for plant scientists to describe, store and retrieve data more easily, using community standards and public repositories. We want to make it easy for scientists to share their results. It will also provide a way to get credit for work, such as source code or research data, which still are not cited in the majority of scientific papers, even though they are crucial for actually undertaking research.
+
+COPO provides wizards for data description, adding metadata to research objects with guided help and natural flow. COPO makes suggestions for what information you might want to submit based on past submissions and similar workflows from other scientists.
                     </strong>
                 </h4>
             </div>
@@ -97,25 +99,16 @@ COPO is a portal for plant scientists to describe, store and retrieve data more 
     </div>
 </section>
 
-
-<!--End About Section-->
-
-
-<!-- WORK Flow Section -->
 <section class="color-green" id="work-sec">
     <div class="container">
-
         <div class="row">
             <div class="col-md-12 col-md-12 col-sm-12">
                 <h2>2nd COPO Workshop Agenda - 12th/13th December 2016</h2>
                 <h4>
                     Day 1
                 </h4>
-
-
                 <span class="lead">Short project and group introduction</span>
                 <ul>
-
                     <li>Set out what we want to achieve</li>
                     <li>Experimental metadata collection (spreadsheets, ISA standard)</li>
                     <li>Spreadsheet annotation technologies (hypothes.is, RightField, OntoMaton)</li>
@@ -128,7 +121,6 @@ COPO is a portal for plant scientists to describe, store and retrieve data more 
                 </ul>
 
                 <h4>Day 2</h4>
-
                 <span class="lead">Continue group breakouts</span>
                 <ul>
                     <li>Start working on annotating experimental metadata using hypothes.is/annotator.js</li>
@@ -141,14 +133,8 @@ COPO is a portal for plant scientists to describe, store and retrieve data more 
 
                 <div class="lead">Summary and thanks</div>
                 <div class="lead">Developer meetup</div>
-                <div class="lead">SAB Conference Call</div>
-
-
             </div>
-
         </div>
-
-
     </div>
 </section>
 
@@ -162,7 +148,6 @@ COPO is a portal for plant scientists to describe, store and retrieve data more 
                 </div>
                 <div class="o_bio">
                     <h4>Earlham Institute</h4>
-
                     The Data Infrastructure and Algorithms group focuses on research into understanding how best to manage, represent and analyse data for open science, as well as exploring new hardware, algorithms and methodologies to develop tools to push the boundaries of data-driven informatics in the life sciences. The team applies their research expertise to develop infrastructure platforms for data and software dissemination and publication, assembly algorithms for viral and microbial metagenomics, large-scale data visualisation, and best practice and training in bioinformatics.
                 </div>
             </div>
@@ -180,16 +165,20 @@ COPO is a portal for plant scientists to describe, store and retrieve data more 
         <div class="row">
             <h2>People</h2>
             <div class="col-md-3 col-md-3 col-sm-3 person">
+                <img src="/assets/img/rob.jpg"/>
+                <div class="p_bio">
+                    <h4>Robert Davey</h4>
+                    <p class="p_position">Earlham Institute</p>
+                    Rob leads the <a href="http://www.earlham.ac.uk/davey-group">Data Infrastructure and Algorithms group</a> at the Earlham Institute and is the PI for the COPO project. He has a PhD in Computer Science from the University of East Anglia, undertaken at the Roberts lab in the <a href="http://www.ncyc.ac.uk">National Collection of Yeast Cultures</a>. Rob leads a number of large computing infrastructure development and deployment projects, is a certified <a href="http://software-carpentry.org">Software Carpentry</a> instructor, an editorial board member for Nature Scientific Data, and a <a href="https://www.software.ac.uk">Software Sustainability Institute</a> Fellow.
+                    <p class="p_orcid"><img src="/assets/img/orcid.png"><a href="http://orcid.org/0000-0002-5589-7754">orcid.org/0000-0002-5589-7754</a></p>
+                </div>
+            </div>
+            <div class="col-md-3 col-md-3 col-sm-3 person">
                 <img src="/assets/img/toni.jpg"/>
                 <div class="p_bio">
                     <h4>Toni Etuk</h4>
                     <p class="p_position">Earlham Institute</p>
-                    Anthony Etuk (Toni) works as a Research Software Engineer at the Earlham Institute. He has a PhD in
-                    Computer Science from the University of Aberdeen. His area of interest was multi-agent systems, with
-                    a focus on computational models of Trust and Reputation. He continues to explore these techniques,
-                    and a number of techniques from Machine Learning and statistics, in contexts of Open Science and
-                    Bioinformatics.
-
+                    Anthony Etuk (Toni) works as a Research Software Engineer at the Earlham Institute. He has a PhD in Computer Science from the University of Aberdeen. His area of interest was multi-agent systems, with a focus on computational models of Trust and Reputation. He continues to explore these techniques, and a number of techniques from Machine Learning and statistics, in contexts of Open Science and Bioinformatics.
                     <p class="p_orcid"><img src="/assets/img/orcid.png"><a
                             href="http://orcid.org/0000-0001-8320-660X">orcid.org/0000-0001-8320-660X</a></p>
                 </div>
@@ -199,10 +188,7 @@ COPO is a portal for plant scientists to describe, store and retrieve data more 
                 <div class="p_bio">
                     <h4>David Johnson</h4>
                     <p class="p_position">Oxford eResearch Centre</p>
-                    David Johnson is a Senior Research Associate / Research Software Engineer in the Oxford e-Research
-                    Centre. His work concerns the development of data infrastructure to support data-intensive research
-                    in the life, natural, and biomedical sciences. In the COPO project, David is part of the ISA Team
-                    developing the underlying 'omics standards framework that COPO uses.
+                    David Johnson is a Senior Research Associate / Research Software Engineer in the Oxford e-Research Centre. His work concerns the development of data infrastructure to support data-intensive research in the life, natural, and biomedical sciences. In the COPO project, David is part of the ISA Team developing the underlying 'omics standards framework that COPO uses.
                     <p class="p_orcid"><img src="/assets/img/orcid.png"><a
                             href="http://orcid.org/0000-0002-2323-6847">orcid.org/0000-0002-2323-6847</a></p>
                 </div>
@@ -230,7 +216,6 @@ COPO is a portal for plant scientists to describe, store and retrieve data more 
                     scrambled it to make a type specimen book.
                 </div>
             </div>
-
         </div>
 
         <div class="row">
@@ -256,7 +241,6 @@ COPO is a portal for plant scientists to describe, store and retrieve data more 
                     scrambled it to make a type specimen book.
                     <p class="p_orcid"><img src="/assets/img/orcid.png"><a
                             href="http://orcid.org/0000-0001-9649-5906">orcid.org/0000-0001-9649-5906</a></p>
-
                 </div>
             </div>
         </div>
@@ -273,8 +257,7 @@ COPO is a portal for plant scientists to describe, store and retrieve data more 
                 <h2>Contact Us</h2>
                 <h4>
                     <strong>
-                        If you have queries, support issues or would like to contribute to COPO, we would love to hear
-                        from you.
+                        If you have queries, support issues or would like to contribute to COPO, we would love to hear from you.
                     </strong>
                 </h4>
             </div>
@@ -296,13 +279,9 @@ COPO is a portal for plant scientists to describe, store and retrieve data more 
 
                     <h4><i class="fa fa-home"></i>&nbsp University of Warwick <span
                             class="small">Coventry, CV4 7AL</span></h4>
-
                 </div>
-
-
             </div>
             <div class="col-md-6">
-
                 <form>
                     <div class="row">
                         <div class="col-md-6 col-sm-6">
@@ -319,8 +298,7 @@ COPO is a portal for plant scientists to describe, store and retrieve data more 
                     <div class="row">
                         <div class="col-md-12 col-sm-12">
                             <div class="form-group">
-                                <textarea name="message" id="message" required="required" class="form-control" rows="3"
-                                          placeholder="Message"></textarea>
+                                <textarea name="message" id="message" required="required" class="form-control" rows="3" placeholder="Message"></textarea>
                             </div>
                             <div class="form-group">
                                 <button type="submit" class="btn btn-default">Submit Request</button>
@@ -331,24 +309,17 @@ COPO is a portal for plant scientists to describe, store and retrieve data more 
                 <br/>
                 <div id="social-icon">
                     <a href="#"><i class="fa fa-facebook fa-2x"></i></a>
-                    <a href="#"><i class="fa fa-twitter fa-2x"></i></a>
-                    <a href="#"><i class="fa fa-linkedin fa-2x"></i></a>
+                    <a href="https://twitter.com/copo_project"><i class="fa fa-twitter fa-2x"></i></a>
                     <a href="#"><i class="fa fa-google-plus fa-2x"></i></a>
-                    <a href="#"><i class="fa fa-pinterest fa-2x"></i></a>
                 </div>
             </div>
-
         </div>
     </div>
 </section>
 <!--End Contact Section -->
 
-
 <div class="for-full-back " id="footer">
-
-
     <a href="https://github.com/collaborative-open-plant-omics">https://github.com/collaborative-open-plant-omics</a>
-
 </div>
 <!--End footer Section -->
 <!-- JAVASCRIPT FILES PLACED AT THE BOTTOM TO REDUCE THE LOADING TIME  -->
@@ -358,6 +329,5 @@ COPO is a portal for plant scientists to describe, store and retrieve data more 
 <script src="assets/plugins/bootstrap.js"></script>
 <!-- CUSTOM SCRIPTS -->
 <script src="assets/js/custom.js"></script>
-
 </body>
 </html>
