Arrange people profiles by insitute

--- a/index.html
+++ b/index.html
@@ -184,53 +184,6 @@ COPO provides wizards for data description, adding metadata to research objects 
                 </div>
             </div>
             <div class="col-md-3 col-md-3 col-sm-3 person">
-                <img src="/assets/img/david.png"/>
-                <div class="p_bio">
-                    <h4>David Johnson</h4>
-                    <p class="p_position">Oxford eResearch Centre</p>
-                    David Johnson is a Senior Research Associate / Research Software Engineer in the Oxford e-Research Centre. His work concerns the development of data infrastructure to support data-intensive research in the life, natural, and biomedical sciences. In the COPO project, David is part of the ISA Team developing the underlying 'omics standards framework that COPO uses.
-                    <p class="p_orcid"><img src="/assets/img/orcid.png"><a
-                            href="http://orcid.org/0000-0002-2323-6847">orcid.org/0000-0002-2323-6847</a></p>
-                </div>
-            </div>
-
-            <div class="col-md-3 col-md-3 col-sm-3 person">
-                <img src="/assets/img/Susanna.jpg"/>
-                <div class="p_bio">
-                    <h4>Pauli Gaultieri</h4>
-                    <p class="p_position">Oxford eResearch</p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
-                    and
-                    scrambled it to make a type specimen book.
-                </div>
-            </div>
-            <div class="col-md-3 col-md-3 col-sm-3 person">
-                <img src="/assets/img/Alejandra.jpg"/>
-                <div class="p_bio">
-                    <h4>Christopher Molisanti</h4>
-                    <p class="p_position">Oxford eResearch</p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
-                    and
-                    scrambled it to make a type specimen book.
-                </div>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-md-3 col-md-3 col-sm-3 person">
-                <img src="/assets/img/Philippe.jpg"/>
-                <div class="p_bio">
-                    <h4>Pauli Gaultieri</h4>
-                    <p class="p_position">Oxford eResearch</p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
-                    and
-                    scrambled it to make a type specimen book.
-                </div>
-            </div>
-            <div class="col-md-3 col-md-3 col-sm-3 person">
                 <img src="/assets/img/felix.jpg"/>
                 <div class="p_bio">
                     <h4>Felix Shaw</h4>
@@ -241,6 +194,51 @@ COPO provides wizards for data description, adding metadata to research objects 
                     scrambled it to make a type specimen book.
                     <p class="p_orcid"><img src="/assets/img/orcid.png"><a
                             href="http://orcid.org/0000-0001-9649-5906">orcid.org/0000-0001-9649-5906</a></p>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-3 col-md-3 col-sm-3 person">
+                <img src="/assets/img/Susanna.jpg"/>
+                <div class="p_bio">
+                    <h4>Susanna Sansone</h4>
+                    <p class="p_position">Oxford eResearch</p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
+                    and
+                    scrambled it to make a type specimen book.
+                </div>
+            </div>
+            <div class="col-md-3 col-md-3 col-sm-3 person">
+                <img src="/assets/img/david.png"/>
+                <div class="p_bio">
+                    <h4>David Johnson</h4>
+                    <p class="p_position">Oxford eResearch Centre</p>
+                    David Johnson is a Senior Research Associate / Research Software Engineer in the Oxford e-Research Centre. His work concerns the development of data infrastructure to support data-intensive research in the life, natural, and biomedical sciences. In the COPO project, David is part of the ISA Team developing the underlying 'omics standards framework that COPO uses.
+                    <p class="p_orcid"><img src="/assets/img/orcid.png"><a
+                            href="http://orcid.org/0000-0002-2323-6847">orcid.org/0000-0002-2323-6847</a></p>
+                </div>
+            </div>
+            <div class="col-md-3 col-md-3 col-sm-3 person">
+                <img src="/assets/img/Alejandra.jpg"/>
+                <div class="p_bio">
+                    <h4>Alejandra Gonzalez Beltran</h4>
+                    <p class="p_position">Oxford eResearch</p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
+                    and
+                    scrambled it to make a type specimen book.
+                </div>
+            </div>
+            <div class="col-md-3 col-md-3 col-sm-3 person">
+                <img src="/assets/img/Philippe.jpg"/>
+                <div class="p_bio">
+                    <h4>Philippe Rocca-Serra</h4>
+                    <p class="p_position">Oxford eResearch</p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
+                    and
+                    scrambled it to make a type specimen book.
                 </div>
             </div>
         </div>
