Pretty up Project paragraph text

--- a/index.html
+++ b/index.html
@@ -84,12 +84,11 @@
         <div class="row">
             <div class="col-md-12 col-md-12 col-sm-12">
                 <h2>Project</h2>
-                <h4>
-                    <strong>
+                <h4><div style="text-align: justify; text-justify: inter-word">
 COPO is a portal for plant scientists to describe, store and retrieve data more easily, using community standards and public repositories. We want to make it easy for scientists to share their results. It will also provide a way to get credit for work, such as source code or research data, which still are not cited in the majority of scientific papers, even though they are crucial for actually undertaking research.
 
 COPO provides wizards for data description, adding metadata to research objects with guided help and natural flow. COPO makes suggestions for what information you might want to submit based on past submissions and similar workflows from other scientists.
-                    </strong>
+                    </div>
                 </h4>
             </div>
 
