change paths to relative

--- a/index.html
+++ b/index.html
@@ -212,26 +212,26 @@ COPO is a portal for plant scientists to describe, store & retrieve data more ea
         <div class="row">
             <h2>People</h2>
             <div class="col-md-3 col-md-3 col-sm-3 person">
-                <img src="/assets/img/rob.jpg"/>
+                <img src="assets/img/rob.jpg"/>
                 <div class="p_bio">
                     <h4>Robert Davey</h4>
                     <p class="p_position">Earlham Institute</p>
                     Rob leads the <a href="http://www.earlham.ac.uk/davey-group">Data Infrastructure and Algorithms group</a> at the Earlham Institute and is the PI for the COPO project. He has a PhD in Computer Science from the University of East Anglia, undertaken at the Roberts lab in the <a href="http://www.ncyc.ac.uk">National Collection of Yeast Cultures</a>. Rob leads a number of large computing infrastructure development and deployment projects, is a certified <a href="http://software-carpentry.org">Software Carpentry</a> instructor, an editorial board member for Nature Scientific Data, and a <a href="https://www.software.ac.uk">Software Sustainability Institute</a> Fellow.
-                    <p class="p_orcid"><img src="/assets/img/orcid.png"><a href="http://orcid.org/0000-0002-5589-7754">orcid.org/0000-0002-5589-7754</a></p>
+                    <p class="p_orcid"><img src="assets/img/orcid.png"><a href="http://orcid.org/0000-0002-5589-7754">orcid.org/0000-0002-5589-7754</a></p>
                 </div>
             </div>
             <div class="col-md-3 col-md-3 col-sm-3 person">
-                <img src="/assets/img/toni.jpg"/>
+                <img src="assets/img/toni.jpg"/>
                 <div class="p_bio">
                     <h4>Toni Etuk</h4>
                     <p class="p_position">Earlham Institute</p>
                     Anthony Etuk (Toni) works as a Research Software Engineer at the Earlham Institute. He has a PhD in Computer Science from the University of Aberdeen. His area of interest was multi-agent systems, with a focus on computational models of Trust and Reputation. He continues to explore these techniques, and a number of techniques from Machine Learning and statistics, in contexts of Open Science and Bioinformatics.
-                    <p class="p_orcid"><img src="/assets/img/orcid.png"><a
+                    <p class="p_orcid"><img src="assets/img/orcid.png"><a
                             href="http://orcid.org/0000-0001-8320-660X">orcid.org/0000-0001-8320-660X</a></p>
                 </div>
             </div>
             <div class="col-md-3 col-md-3 col-sm-3 person">
-                <img src="/assets/img/felix.jpg"/>
+                <img src="assets/img/felix.jpg"/>
                 <div class="p_bio">
                     <h4>Felix Shaw</h4>
                     <p class="p_position">Earlham Institute</p>
@@ -239,14 +239,14 @@ COPO is a portal for plant scientists to describe, store & retrieve data more ea
                     industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
                     and
                     scrambled it to make a type specimen book.
-                    <p class="p_orcid"><img src="/assets/img/orcid.png"><a
+                    <p class="p_orcid"><img src="assets/img/orcid.png"><a
                             href="http://orcid.org/0000-0001-9649-5906">orcid.org/0000-0001-9649-5906</a></p>
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="col-md-3 col-md-3 col-sm-3 person">
-                <img src="/assets/img/Susanna.jpg"/>
+                <img src="assets/img/Susanna.jpg"/>
                 <div class="p_bio">
                     <h4>Susanna Sansone</h4>
                     <p class="p_position">Oxford eResearch</p>
@@ -257,17 +257,17 @@ COPO is a portal for plant scientists to describe, store & retrieve data more ea
                 </div>
             </div>
             <div class="col-md-3 col-md-3 col-sm-3 person">
-                <img src="/assets/img/david.png"/>
+                <img src="assets/img/david.png"/>
                 <div class="p_bio">
                     <h4>David Johnson</h4>
                     <p class="p_position">Oxford eResearch Centre</p>
                     David Johnson is a Senior Research Associate / Research Software Engineer in the Oxford e-Research Centre. His work concerns the development of data infrastructure to support data-intensive research in the life, natural, and biomedical sciences. In the COPO project, David is part of the ISA Team developing the underlying 'omics standards framework that COPO uses.
-                    <p class="p_orcid"><img src="/assets/img/orcid.png"><a
+                    <p class="p_orcid"><img src="assets/img/orcid.png"><a
                             href="http://orcid.org/0000-0002-2323-6847">orcid.org/0000-0002-2323-6847</a></p>
                 </div>
             </div>
             <div class="col-md-3 col-md-3 col-sm-3 person">
-                <img src="/assets/img/Alejandra.jpg"/>
+                <img src="assets/img/Alejandra.jpg"/>
                 <div class="p_bio">
                     <h4>Alejandra Gonzalez Beltran</h4>
                     <p class="p_position">Oxford eResearch</p>
@@ -278,7 +278,7 @@ COPO is a portal for plant scientists to describe, store & retrieve data more ea
                 </div>
             </div>
             <div class="col-md-3 col-md-3 col-sm-3 person">
-                <img src="/assets/img/Philippe.jpg"/>
+                <img src="assets/img/Philippe.jpg"/>
                 <div class="p_bio">
                     <h4>Philippe Rocca-Serra</h4>
                     <p class="p_position">Oxford eResearch</p>
